--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,155 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: #777070;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container{
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 100px;
+}
+
+.semaphore{
+  background-color: #212e20;
+  width: 150px;
+  aspect-ratio: 9 / 22;
+  border-radius: 5%;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 0;
+}
+
+.red{
+  background-color: rgb(71, 36, 36);
+  width: 100px;
+  aspect-ratio: 9 / 9;
+  border-radius: 50%;
+  margin-bottom: 220px;
+  position: absolute; 
+  z-index: 1;
+}
+
+.orange{
+  background-color: rgb(134, 83, 16);
+  width: 100px;
+  aspect-ratio: 9 / 9;
+  border-radius: 50%;
+  position: absolute;
+  z-index: 1;
+}
+
+.green {
+  background-color: rgb(9, 63, 9);
+  width: 100px;
+  aspect-ratio: 9 / 9;
+  border-radius: 50%;
+  position: absolute;
+  margin-top: 220px;
+  z-index: 1;
+}
+
+.purple-container{
+  position: absolute;
+  width:150px;
+  aspect-ratio: 5 / 4;
+  background-color: #212e20;
+  z-index: 0;
+  top: 345px;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 2%;
+  border-radius: 10%;
+}
+
+.purple{
+  background-color: rgb(38, 6, 41);
+  width: 100px;
+  aspect-ratio: 9 / 9;
+  border-radius: 50%;
+  position: absolute;
+  /* margin-top: 440px; */
+  z-index: 1;
+}
+
+
+
+.red-lighted {
+  background-color: red;
+  width: 100px;
+  aspect-ratio: 9 / 9;
+  border-radius: 50%;
+  position: absolute;
+  margin-bottom: 220px;
+}
+.red-lighted::after{
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: red;
+  filter: blur(1.75rem);
+  z-index: 1;
+}
+
+.orange-lighted{
+  background-color: #df8b1e;
+  width: 100px;
+  aspect-ratio: 9 / 9;
+  border-radius: 50%;
+  position: absolute;
+  z-index: 1;
+}
+.orange-lighted::after{
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: #df8b1e;
+  filter: blur(1.75rem);
+}
+
+.green-lighted{
+  background-color: #1d8f1d;
+  width: 100px;
+  aspect-ratio: 9 / 9;
+  border-radius: 50%;
+  position: absolute;
+  margin-top: 220px;
+}
+.green-lighted::after{
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: #1d8f1d;
+  filter: blur(1.75rem);
+  z-index: 1;
+}
+
+.purple-lighted {
+  background-color: #b108db;
+  width: 100px;
+  aspect-ratio: 9 / 9;
+  border-radius: 50%;
+  position: absolute;
+}
+.purple-lighted::after{
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: #b108db;
+  filter: blur(1.75rem);
+  z-index: 1;
+}
+
+
+button {
+  margin-left: 20px;
+  color: white;
+  background-color: #212e20;
+  font-size: 18px;
+  border: none;
+  padding: 1%;
+  border-radius: 5%;
+  
 }
